fix: BIM-42731 set ellipsis-text-overflow for modal-layout-title.component.scss

--- a/projects/overlays/src/components/modal/components/modal-layout-title/modal-layout-title.component.scss
+++ b/projects/overlays/src/components/modal/components/modal-layout-title/modal-layout-title.component.scss
@@ -7,8 +7,9 @@
   flex: 1;
   color: semantic-color(text-primary);
   @include font-preset-h3;
+  min-width: 0;
 }
 
 .content-wrapper {
-  @include line-clamp(3);
+  @include ellipsis-text-overflow;
 }
